force-app/ifsr/main/schema/objects/Interaction__c/fields/Additional_Campaign_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Additional_Campaign_Reference_ID__c</fullName>
    <description>An external ID to match to the Additional Campaign. It must either match an existing campaign&#39;s Campaign Reference ID, or a campaign&#39;s Salesforce ID. If filled out, it populates the Interaction &quot;Additional Campaign Key&quot; formula field.</description>
    <label>Additional Campaign Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>