force-app/ifsr/main/schema/objects/Interaction__c/fields/Affiliation_Role__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Role__c</fullName>
    <description>The Contact&#39;s position for the Affiliated Account. If this field is left blank, the default Role for the Account Record Type will be used, if one is indicated in HEDA Settings, otherwise the Role will be blank.</description>
    <inlineHelpText>The Contact&#39;s relationship to the Affiliated Account.</inlineHelpText>
    <label>Affiliation Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>