force-app/ifsr/main/schema/objects/Interaction__c/fields/Affiliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Status__c</fullName>
    <description>The status of the Contact&#39;s affiliation to the Affiliated Account. Defaulted to &quot;Current.&quot;</description>
    <inlineHelpText>The status of the Contact&#39;s affiliation to the Affiliated Account.</inlineHelpText>
    <label>Affiliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>