force-app/ifsr/main/schema/objects/Interaction__c/fields/Campaign_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Reference_ID__c</fullName>
    <description>An external ID to match to the Campaign. It must either match an existing campaign&#39;s Campaign Reference ID, or a campaign&#39;s Salesforce ID. If filled out, it populates the Interaction &quot;Campaign Key&quot; formula field.</description>
    <label>Campaign Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>