force-app/ifsr/main/schema/objects/Interaction__c/fields/Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_ID__c</fullName>
    <description>The individual&#39;s external ID from another database, used to match on Contact in the Lead and Contact Matching Rules.</description>
    <inlineHelpText>The individual&#39;s external ID from another database.</inlineHelpText>
    <label>Constituent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>