force-app/ifsr/main/schema/objects/Interaction__c/fields/Contact_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_ID__c</fullName>
    <description>If this Interaction is associated with a Contact, the 18-digit version of that Contact&#39;s Account ID is displayed here. Used by the Interaction Processor.</description>
    <formula>CASESAFEID(Contact__r.AccountId)</formula>
    <inlineHelpText>If this Interaction is associated with a Contact, the 18-digit version of that Contact&#39;s Account ID is displayed here.</inlineHelpText>
    <label>Contact.Account ID</label>
    <type>Text</type>
</CustomField>