force-app/ifsr/main/schema/objects/Interaction__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>The individual&#39;s current job title.</description>
    <inlineHelpText>Enter the individual&#39;s current job title.</inlineHelpText>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>