force-app/ifsr/main/schema/objects/Interaction__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>The way in which the Lead or Contact&#39;s information was first received.</description>
    <inlineHelpText>Indicate the initial source of this data.</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase List</fullName>
            </value>
            <value>
                <fullName>College Fair</fullName>
            </value>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>