force-app/ifsr/main/schema/objects/Interaction__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Set to the Start Date of the Term. If Term Start Date is blank, set to today&#39;s date.</description>
    <formula>IF( ISBLANK(Term__r.hed__Start_Date__c), TODAY(), Term__r.hed__Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>